--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <div class="calculator">
+            <input type="text" placeholder="0" id="display-screen">
             <input type="text" placeholder="0" id="output-screen">
             <button onclick="Clear()" class="operations">cl</button>
             <button onclick="del()" class="operations">DEL</button>
